crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_enum__either_enum.snap
---
source: crates/kirin-derive-core/src/field/tests/test_enum.rs
expression: generate(input)
---
impl<'a, T> ::kirin::ir::HasArguments<'a> for TestEnum<T> {
    type Iter = TestEnumArgumentsIter<'a, ::kirin::ir::SSAValue>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            TestEnum::VariantA { wrapped, .. } => TestEnumArgumentsIter::VariantA(
                <InnerStructA<T> as ::kirin::ir::HasArguments>::arguments(wrapped),
            ),
            TestEnum::VariantB(field_0, ..) => TestEnumArgumentsIter::VariantB(
                <InnerStructB as ::kirin::ir::HasArguments>::arguments(field_0),
            ),
            TestEnum::VariantC { a, c, .. } => {
                TestEnumArgumentsIter::VariantC(std::iter::once(a).chain(std::iter::once(c)))
            }
            TestEnum::VariantD(field_0, field_1, field_2, ..) => TestEnumArgumentsIter::VariantD(
                std::iter::once(field_0).chain(std::iter::once(field_2)),
            ),
        }
    }
}
pub enum TestEnumArgumentsIter<'a, T> {
    VariantA(<InnerStructA<T> as ::kirin::ir::HasArguments<'a>>::Iter),
    VariantB(<InnerStructB as ::kirin::ir::HasArguments<'a>>::Iter),
    VariantC(
        std::iter::Chain<
            std::iter::Once<&'a ::kirin::ir::SSAValue>,
            std::iter::Once<&'a ::kirin::ir::SSAValue>,
        >,
    ),
    VariantD(
        std::iter::Chain<
            std::iter::Once<&'a ::kirin::ir::SSAValue>,
            std::iter::Once<&'a ::kirin::ir::SSAValue>,
        >,
    ),
}
impl<'a, T> Iterator for TestEnumArgumentsIter<'a, T> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            TestEnumArgumentsIter::VariantA(iter) => iter.next(),
            TestEnumArgumentsIter::VariantB(iter) => iter.next(),
            TestEnumArgumentsIter::VariantC(iter) => iter.next(),
            TestEnumArgumentsIter::VariantD(iter) => iter.next(),
        }
    }
}
