crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_enum__global_enum_wrapper.snap
---
source: crates/kirin-derive-core/src/field/tests/test_enum.rs
expression: generate(input)
---
impl<'a, T> ::kirin::ir::HasArguments<'a> for TestEnum<T> {
    type Iter = TestEnumArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            TestEnum::VariantA { wrapped, .. } => TestEnumArgumentsIter::VariantA(
                <InnerStructA<T> as ::kirin::ir::HasArguments>::arguments(wrapped),
            ),
            TestEnum::VariantB(field_0, ..) => TestEnumArgumentsIter::VariantB(
                <InnerStructB as ::kirin::ir::HasArguments>::arguments(field_0),
            ),
        }
    }
}
pub enum TestEnumArgumentsIter<'a, T> {
    VariantA(<InnerStructA<T> as ::kirin::ir::HasArguments<'a>>::Iter),
    VariantB(<InnerStructB as ::kirin::ir::HasArguments<'a>>::Iter),
}
impl<'a, T> Iterator for TestEnumArgumentsIter<'a, T> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            TestEnumArgumentsIter::VariantA(iter) => iter.next(),
            TestEnumArgumentsIter::VariantB(iter) => iter.next(),
        }
    }
}
