crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_enum__unit_enum.snap
---
source: crates/kirin-derive-core/src/field/tests/test_enum.rs
expression: generate(input)
---
impl<'a> ::kirin::ir::HasArguments<'a> for TestEnum {
    type Iter = TestEnumArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            TestEnum::VariantA => {
                TestEnumArgumentsIter::VariantA(std::iter::empty::<&'a ::kirin::ir::SSAValue>())
            }
            TestEnum::VariantB => {
                TestEnumArgumentsIter::VariantB(std::iter::empty::<&'a ::kirin::ir::SSAValue>())
            }
        }
    }
}
pub enum TestEnumArgumentsIter<'a> {
    VariantA(std::iter::Empty<&'a ::kirin::ir::SSAValue>),
    VariantB(std::iter::Empty<&'a ::kirin::ir::SSAValue>),
}
impl<'a> Iterator for TestEnumArgumentsIter<'a> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            TestEnumArgumentsIter::VariantA(iter) => iter.next(),
            TestEnumArgumentsIter::VariantB(iter) => iter.next(),
        }
    }
}
